styles/style.css
/* stylesheet for https://github.com/Mervodactyl/myPair - "myPair" */

*,
::before,
::after {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
      -ms-box-sizing: border-box;
       -o-box-sizing: border-box;
          box-sizing: border-box;
}

.background-image {
  background-image: url("../styles/images/header.jpg");
  background-position: center;
  background-size: cover;
  height: 200px;
}

h1 {
  color: blue;
}

